Native Image build support Build und Run Anleitungen Postgres als Test Container für DEV und Docker Image in PROD inkl. Flyway Externalisierte Ressourcen mit ExternalTemplateLocator